--- a/pantalla_inicio/index.html
+++ b/pantalla_inicio/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ACADEMIA SHIVA YANQUEE</title>
+		<title>Academia Shiva Shakti</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
